--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+/*---break---*/
+@custom-variant dark (&:is(.dark *));
 @tailwind utilities;
 
 html,
@@ -42,3 +45,4 @@ body {
   --color-green-light: #2EBF72;
 
 }
+
