feat: 로그인 테스트를 위한 임시 커밋

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@ body {
   --color-gray: #4C525D;
   --color-gray-2: #E9E9E9;
   --color-gray-3: #F3F4F6;
+  --color-gray-4: #5A5A5A;
   --color-subtitle:  #8B8B8B;
   --color-hana-red: #DC221E;
   --color-hana-green: #009178;
