feat: 햄버거 메뉴 구현

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body {
   max-height: 100vh;
   /*overflow-y: hidden;*/
   word-break: keep-all;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 * {
   box-sizing: border-box;
