chore: package-lock.json gitignore에서 제거

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,20 @@ body {
   --color-blue-light: #dde8ff;
   --color-green-light: #2ebf72;
 }
+
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE */
+    scrollbar-width: none; /* Firefox */
+  }
+}
