feat: 레이아웃 및 경로, tab component 수정 (#16)

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@ body {
   max-width: 768px;
   margin: 0 auto;
   min-height: 100vh;
-  max-height: 100vh;
-  /*overflow-y: hidden;*/
+  /*max-height: 100vh;*/
+  overflow-y: scroll;
   word-break: keep-all;
   /* border: 1px solid red; */
 }
