--- a/app/globals.css
+++ b/app/globals.css
@@ -107,6 +107,30 @@ body {
     -ms-overflow-style: none; /* IE */
     scrollbar-width: none; /* Firefox */
   }
+
+  /* Chart Skeleton 관련 스타일링 */
+  @keyframes shimmer {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+
+  .animate-shimmer::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    animation: shimmer 1.5s infinite;
+  }
 }
 
 /* carousel 설정 */
