--- a/app/globals.css
+++ b/app/globals.css
@@ -289,3 +289,14 @@ body {
   background-color: rgba(0, 145, 120, 1) !important;
   color: #ffffff !important;
 }
+
+/* isa 계좌 연동 부분 사용 */
+.custom-grid {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+@media (min-width: 459px) {
+  .custom-grid {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
